#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([TA-Demo], [0.0.1], [bugs@example.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([a.h])
AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([makefile])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([malloc.h stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC

AC_OUTPUT
